<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_release" translatable="false" tools:ignore="UnusedResources">ChannelFlow TV</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">ChannelFlow TV Debug</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="loading">Loading…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="byletter_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_max_bitrate_title">Max streaming bitrate</string>
    <string name="settings_title">Preferences</string>
    <string name="pref_authentication_cat">Authentication</string>
    <string name="chapters">Chapters</string>
    <string name="state_disabled">Disabled</string>
    <string name="lbl_settings">Preferences</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_refresh_guide">Refresh guide</string>
    <string name="msg_guide_updated">Guide updated</string>
    <string name="lbl_check_for_updates">Check for updates</string>
    <string name="lbl_checking_for_updates">Checking GitHub…</string>
    <string name="lbl_app_up_to_date">You have the latest version (%1$s)</string>
    <string name="lbl_update_available">Update available: %1$s</string>
    <string name="lbl_update_check_failed">Could not check GitHub for updates</string>
    <string name="lbl_open_github_release">Open GitHub release</string>
    <string name="lbl_install_update">Download and install</string>
    <string name="lbl_downloading_update">Downloading update… %1$d%%</string>
    <string name="lbl_installing_update">Installing update…</string>
    <string name="lbl_update_no_apk">Update found, but no APK is attached to the GitHub release</string>
    <string name="lbl_allow_unknown_sources">Allow ChannelFlow TV to install updates</string>
    <string name="lbl_update_install_failed">Could not install the update</string>
    <string name="msg_update_signature_mismatch">This update cannot replace the app already installed. Uninstall ChannelFlow TV, keep app data if asked, then install the new APK.</string>
    <string name="msg_update_package_mismatch">This APK is a different ChannelFlow TV package. Uninstall the copy you are replacing, then install the new APK.</string>
    <string name="lbl_update_ready">Update available</string>
    <string name="msg_update_ready">ChannelFlow TV %1$s is ready to install. You have %2$s.</string>
    <string name="lbl_install_now">Install now</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_continue_watching">Continue watching</string>
    <string name="continue_listening">Continue listening</string>
    <string name="lbl_next_up">Next up</string>
    <string name="lbl_on_now">On now</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By letter</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_status">%1$s / %2$s</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_search">Search</string>
    <string name="msg_not_implemented">" not implemented"</string>
    <string name="lbl_latest">Recently added</string>
    <string name="lbl_latest_in">Recently added in %1$s</string>
    <string name="lbl_by_name">By name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_coming_up">Coming up</string>
    <string name="lbl_favorite_channels">Favorite channels</string>
    <string name="lbl_other_channels">Other channels</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV series</string>
    <string name="lbl_other">Other</string>
    <string name="because_you_watched">Because you watched %1$s</string>
    <string name="lbl_play_all">Play all</string>
    <string name="lbl_shuffle_all">Shuffle all</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_pause">Pause</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancel_recording">Cancel recording</string>
    <string name="lbl_cancel_series">Cancel series</string>
    <string name="lbl_record_series">Record series</string>
    <string name="lbl_record">Record</string>
    <string name="msg_set_to_record">Program set to record</string>
    <string name="msg_unable_to_create_recording">Unable to create recording</string>
    <string name="msg_recording_cancelled">Recording cancelled</string>
    <string name="msg_unable_to_cancel">Unable to cancel recording</string>
    <string name="lbl_cast_crew">Cast &amp; crew</string>
    <string name="lbl_additional_parts">Additional parts</string>
    <string name="lbl_chapters">Chapters</string>
    <string name="lbl_specials">Specials</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_watched">Watched</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_runs">"Runs"</string>
    <string name="runtime_hours_minutes">%1$dh %2$dm</string>
    <string name="runtime_minutes">%1$dm</string>
    <string name="lbl_ends">"Ends"</string>
    <string name="lbl_directed_by">"Directed by"</string>
    <string name="lbl_last_played">"Last played "</string>
    <string name="lbl_runtime">Runtime</string>
    <string name="lbl_other_options">Other options</string>
    <string name="lbl_people">People</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_recordings">Recordings</string>
    <string name="lbl_none">None</string>
    <string name="msg_video_playback_error">"Video playback error - "</string>
    <string name="lbl_bracket_unknown">Unknown</string>
    <string name="lbl_trailer">"Trailer "</string>
    <string name="lbl_play_trailers">Play trailer(s)</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_enter_server_address">Enter server address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="lbl_your_quick_pin">Your quick pin</string>
    <string name="lbl_quick_pin_help">Open ChannelFlow, go to Quick Pin, and enter this code. The pin lasts 10 minutes.</string>
    <string name="lbl_quick_pin_waiting">Waiting for pin…</string>
    <string name="lbl_quick_pin_waiting_server">Waiting for ChannelFlow to connect…</string>
    <string name="lbl_retry">Retry</string>
    <string name="msg_pin_server_unreachable">Could not reach the pin server. Check the network and try again.</string>
    <string name="msg_quick_pin_expired">This pin expired. Try again for a new pin.</string>
    <string name="pref_connection">Server</string>
    <string name="pref_connection_description">Connect with a quick pin from ChannelFlow</string>
    <string name="lbl_change_server">Change server</string>
    <string name="lbl_change_server_help">Get a new pin and connect again</string>
    <string name="lbl_switch_server">Switch server</string>
    <string name="lbl_switch_server_help">Use a ChannelFlow server you already connected</string>
    <string name="lbl_add_server">Add server</string>
    <string name="lbl_add_server_help">Pair a new ChannelFlow server with a quick pin</string>
    <string name="lbl_remove_server_help">Choose a saved server to remove</string>
    <string name="lbl_current_server">Current server</string>
    <string name="lbl_no_saved_servers">No servers saved yet</string>
    <string name="lbl_no_servers_to_remove">No servers to remove</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_born">"Born "</string>
    <string name="lbl_loading_elipses">Loading…</string>
    <string name="msg_playback_not_allowed">Playback not allowed at this time</string>
    <string name="msg_playback_restricted">The administrator has restricted playback of this item at this time</string>
    <string name="msg_playback_incompatible">Cannot play this video format</string>
    <string name="lbl_never">Never</string>
    <string name="msg_cannot_play_time">Cannot play this item at this time</string>
    <string name="msg_cannot_play">This item cannot be played</string>
    <string name="lbl_no_items">No items</string>
    <string name="lbl_empty">Empty</string>
    <string name="lbl_tv_queuing">Play next episode automatically</string>
    <string name="lbl_search_hint">Search text (select for keyboard)</string>
    <string name="lbl_play_first_unwatched">Play first unwatched</string>
    <string name="lbl_mark_unplayed">Mark unplayed</string>
    <string name="lbl_mark_played">Mark played</string>
    <string name="lbl_remove_favorite">Remove favorite</string>
    <string name="lbl_add_favorite">Add favorite</string>
    <string name="lbl_now_playing_track">%1$s of %2$s</string>
    <string name="lbl_now_playing_album">from %1$s</string>
    <string name="msg_no_playable_items">No playable items</string>
    <string name="lbl_unwatched">Unwatched</string>
    <string name="lbl_load_channels">"Load channels "</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_on">On </string>
    <string name="lbl_tune_to_channel">Tune to channel</string>
    <string name="lbl_remind_me">Remind me</string>
    <string name="lbl_cancel_reminder">Cancel reminder</string>
    <string name="msg_reminder_set">Reminder set</string>
    <string name="msg_reminder_cancelled">Reminder cancelled</string>
    <string name="lbl_program_starting">Starting now</string>
    <string name="msg_watch_reminder">This program is starting. Do you still want to watch it?</string>
    <string name="lbl_keep_watching">Keep watching current show/movie</string>
    <string name="msg_recording_now">Recording now</string>
    <string name="msg_will_record">Will record</string>
    <string name="lbl_begin_padding">Begin padding</string>
    <string name="lbl_program_ended">Program ended</string>
    <string name="lbl_end_padding">End padding</string>
    <string name="lbl_similar_items_library">Similar items in your library</string>
    <string name="lbl_record_any_channel">Record on any channel</string>
    <string name="lbl_record_any_time">Record at any time</string>
    <string name="lbl_only_new_episodes">Only new episodes</string>
    <string name="lbl_repeat_options">Repeat options</string>
    <string name="msg_cancel_entire_series">Are you sure you want to cancel this ENTIRE SERIES?</string>
    <string name="pref_audio_direct">Direct</string>
    <string name="pref_audio_compat">Downmix to stereo</string>
    <string name="pref_audio_night_mode">Audio night mode (experimental)</string>
    <string name="lbl_audio_output">Audio output</string>
    <string name="lbl_goto_series">Go to series</string>
    <string name="lbl_enable_debug">Debug options</string>
    <string name="desc_debug">Provide extra information for debugging</string>
    <string name="lbl_showing">Showing</string>
    <string name="lbl_all_items">All items</string>
    <string name="lbl_sorted_by">sorted by</string>
    <string name="lbl_from">from</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_date_show_added">Date show added</string>
    <string name="lbl_date_episode_added">Date episode added</string>
    <string name="lbl_premier_date">Premier date</string>
    <string name="watch_now">Watch now</string>
</resources>