<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="48dp"
    android:layout_marginVertical="27dp"
    tools:context=".ui.startup.StartupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Leanback.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_your_quick_pin"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:letterSpacing="0.12"
        android:textColor="@color/channelflow_text"
        android:textSize="42sp"
        android:textStyle="bold"
        tools:text="K7M2-Q9AB"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_quick_pin_help"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin" />

    <Button
        android:id="@+id/retry"
        style="@style/Button.Default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_retry"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retry" />
</androidx.constraintlayout.widget.ConstraintLayout>
